--- a/04_Fullstack/Aufgabe3/src/main/resources/application.properties
+++ b/04_Fullstack/Aufgabe3/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port = 8082
 
+welcome.message = Hallo Melmi!
+
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:dcbapp
 #spring.datasource.driver-class-name=org.h2.Driver
@@ -10,7 +12,7 @@ server.port = 8082
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/dcbapp
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
